<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:layout_marginTop="15dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etRestaurantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/restaurant_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/meal"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etDishName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/meal_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#78909C" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/comments"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etDishComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/meal_comment"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#646B93" />

    <RatingBar
        android:id="@+id/rbMealRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:isIndicator="false"
        android:max="5"
        android:progressBackgroundTint="@color/lightgrey"
        android:contentDescription="@string/meal_rating"

        android:progressTint="#1B59C5"
        android:stepSize="1" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="#1B59C5"
        android:text="@string/ok"
        android:textColor="@color/white" />

</LinearLayout>