<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/fullName_edt_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/full_name_hint" />

        <EditText
            android:id="@+id/email_edt_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/pass_edt_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/register_txt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>