<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMealCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_botton_right_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:text="@string/placeMeal"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="5dp"
            android:text="@string/comments"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvMealComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:text="@string/meal_comment"
            android:textColor="#455A64" />

        <RatingBar
            android:id="@+id/rbMealRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:padding="2dp"
            android:paddingStart="2dp"
            android:paddingTop="2dp"
            android:paddingEnd="2dp"
            android:paddingBottom="2dp"
            android:progressBackgroundTint="@color/lightgrey"
            android:progressTint="#1B59C5"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
