<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:minHeight="32dp"
        android:text="@string/placeName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/meal_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlace" />

    <TextView
        android:id="@+id/tvMealDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:minHeight="48dp"
        android:text="@string/meal_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMeal" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealDescription"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/exploreLinLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:background="#009688"
                android:src="@drawable/account_foreground"
                app:srcCompat="@drawable/account_foreground" />
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="756dp"
        android:text="Done"
        app:cornerRadius="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>