<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPlace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_right_border"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/placeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="fill"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPlace"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|left"
                    app:srcCompat="@drawable/default_place_background" />

                <LinearLayout
                    android:id="@+id/tvPlaceDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPlaceName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/placeName"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tvPlaceRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="0.0"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tvPlaceAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:text="@string/place_address"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvExpandImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="10dp"
                    android:text="@string/right_arrow"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    tools:ignore="RelativeOverlap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/placeHeader"
                android:layout_alignParentBottom="false"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMenuHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="8dp"
                    android:text="Menu"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMeal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    tools:listitem="@layout/library_user_meal_list" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>